--- a/package.json
+++ b/package.json
@@ -3,5 +3,7 @@
     "esbuild": "^0.25.3",
     "nodemon": "^3.1.10"
   },
-  "dependencies": {}
+  "dependencies": {
+    "dotenv": "^16.5.0"
+  }
 }
